<resources>
    <string name="app_name">Car Seat Monitor App</string>
    <string name="action_settings">Settings</string>
    <string name="scanForDevicesHeaderTextView">Scan for devices</string>
    <string name="noDevicesTextView">There are currently no devices available</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="title_devices">Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="no_data">No data</string>
    <string name="zero_value">0</string>
    <string name="label_car_seat_status">Car seat status:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="label_vehicle_speed">Vehicle speed (approx - kmph): </string>
    <string name="label_rssi_status">Proximity status: </string>
    <string name="label_child_out_of_seat_stationary_alert">Child out of seat (stationary)</string>
    <string name="label_child_out_of_seat_in_transit_alert">Child out of seat (in transit)</string>
    <string name="label_child_still_in_seat_alert">Child still in seat</string>
    <string name="label_alerts">Alerts</string>
    <string name="label_alert_status">Alert Status: </string>
    <string name="alert_status_value_no_alert_raised">No alert raised</string>
    <string name="alert_status_value_alert_raised">ALERT RAISED!!!</string>
    <string name="alert_status_value_alerts_acknowledged">alerts acknowledged</string>
    <string name="alert_status_value_alerts_unacknowledged">alerts unacknowledged (secondary contact notified)</string>
    <string name="alert_button_acknowledge">Acknowledge</string>
    <string name="alert_button_no_alert">no alert</string>
    <string name="label_secondary_contact">Secondary Contact: </string>
    <string name="no_secondary_contact">No secondary Contact</string>
    <string name="label_primary">Primary</string>
    <string name="label_title">Car Seat Monitor</string>
    <string name="label_secondary">Secondary</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_refresh">Refresh</string>
</resources>
