<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
android:layout_width="match_parent"
android:background="@drawable/background"
android:layout_height="wrap_content"
android:layout_margin="5dp">

<LinearLayout android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">
    <Space android:layout_width="5dp"
        android:layout_height="wrap_content"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/sensor_state_gradient_background"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/label_state"
            android:textSize="18sp" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/connection_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryRed"
            android:text="@string/disconnected"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/sensor_state_gradient_background"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/label_car_seat_status"
            android:textSize="18sp" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/car_seat_status_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/sensor_state_gradient_background"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:paddingLeft="10dp"
            android:layout_height="wrap_content"
            android:text="@string/label_vehicle_speed"
            android:textSize="18sp" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/vehicle_speed_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero_value"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/sensor_state_gradient_background"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_rssi_status"
            android:paddingLeft="10dp"
            android:textSize="18sp" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/rssi_status_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/sensor_state_gradient_background"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_secondary_contact"
            android:paddingLeft="10dp"
            android:textSize="18sp" />

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/secondary_contact_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_secondary_contact"
            android:textSize="18sp" />
    </LinearLayout>
    <Space android:layout_width="10dp"
        android:layout_height="15dp"/>

    <TextView
        android:id="@+id/label_alerts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_alerts"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_gradient_background"
        android:layout_margin="5dp">

        <LinearLayout android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_child_out_of_seat_stationary_alert"
                android:textSize="16sp"
                android:textStyle="bold" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_alert_status"
                android:textSize="16sp"/>
                <Space android:layout_width="5dp"
                    android:layout_height="15dp"/>

                <TextView
                    android:id="@+id/child_out_of_seat_stationary_status_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_status_value_no_alert_raised"
                    android:textColor="@color/colorAlternative"
                    android:textSize="16sp" />
        </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <Button
            android:id="@+id/button_child_out_of_seat_stationary_alert"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/alert_button_no_alert"
            android:background="@drawable/rounded_button"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            />

    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@drawable/alert_gradient_background"
        android:layout_height="wrap_content"

        android:layout_margin="5dp">
        <LinearLayout android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_child_out_of_seat_in_transit_alert"
                android:textSize="16sp"
                android:textStyle="bold" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_alert_status"
                    android:textSize="16sp"/>
                <Space android:layout_width="5dp"
                    android:layout_height="15dp"/>
                <TextView
                    android:id="@+id/child_out_of_seat_in_transit_status_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_status_value_no_alert_raised"
                    android:textColor="@color/colorAlternative"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <Button
            android:id="@+id/button_child_out_of_seat_in_transit_alert"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_button"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:text="@string/alert_button_no_alert" />
    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_gradient_background"
        android:layout_margin="5dp">
        <LinearLayout android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_child_still_in_seat_alert"
                android:textSize="16sp"
                android:textStyle="bold" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_alert_status"
                    android:textSize="16sp"/>
                <Space android:layout_width="5dp"
                    android:layout_height="15dp"/>
                <TextView
                    android:id="@+id/child_still_in_seat_status_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_status_value_no_alert_raised"
                    android:textColor="@color/colorAlternative"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <Button
            android:id="@+id/button_child_still_in_seat_alert"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_button"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:text="@string/alert_button_no_alert" />
    </LinearLayout>
</LinearLayout>